# stellar-insights

./: .gitignore  ASSET_VERIFICATION_COMPLETE.md  ASSET_VERIFICATION_IMPLEMENTATION_SUMMARY.md  ASSET_VERIFICATION_PROGRESS.md  ASSET_VERIFICATION_QUICK_START.md  CI_CD_READINESS.md  COMPREHENSIVE_ISSUES.md  CREATE_DR_PR_INSTRUCTIONS.md  CREATE_PR_INSTRUCTIONS.md  CSRF_IMPLEMENTATION_SUMMARY.md  DEPENDENCY_FIXES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DISASTER_RECOVERY_IMPLEMENTATION.md  FEATURE_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IP_WHITELIST_FEATURE_COMPLETE.md  ISSUES_CREATED_SUMMARY.md  ISSUE_460_FINAL_RESULTS.md  ISSUE_460_RESOLUTION.md  ISSUE_460_TEST_RESULTS.md  ISSUE_496_COLOR_CONTRAST_COMPLETE.md  KEYBOARD_SHORTCUTS_IMPLEMENTATION.md  LOGGING_SECURITY_IMPLEMENTATION_SUMMARY.md  PROJECT_ISSUES.md  PR_728_distributed_tracing.md  PR_816_request_timeout.md  PR_ASSET_VERIFICATION.md  PR_ASSET_VERIFICATION_SYSTEM.md  PR_DESCRIPTION.md  PR_DISASTER_RECOVERY.md  PR_FINAL.md  PR_FIX_ci_cd_security.md  PR_READY.md  PULL_REQUEST_IP_WHITELIST.md  README.md  README_SECURITY_UPDATE.md  SECURITY_DOCS_INDEX.md  SECURITY_FIXES_README.md  SECURITY_FIX_SUMMARY.md  (+21 more)
backend/: .env.example  ADMIN_AUDIT_LOG.md  CHANGES_SUMMARY.md  CHANGES_VISUAL_SUMMARY.md  CI_CHECKS.md  COMPRESSION.md  CORRIDOR_DETECTION_FLOW.md  CORRIDOR_FIX_DOCUMENTATION.md  Cargo.toml  Dockerfile  FIX_COMPLETE.md  GRAPHQL_API.md  GRAPHQL_CHANGELOG.md  IP_WHITELIST_DOCUMENTATION.md  IP_WHITELIST_IMPLEMENTATION_SUMMARY.md  IP_WHITELIST_QUICK_START.md  MIGRATIONS.md  MIGRATION_SYSTEM_SUMMARY.md  ML_README.md  PERFORMANCE_INDEXES_GUIDE.md  QUICK_REFERENCE.md  RATE_LIMITING.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  README_FIX.md  RESOURCE_USAGE_AUDIT.md  RPC_RATE_LIMITING.md  SECURITY_FIX_CHECKLIST.md  SECURITY_FIX_README.md  SECURITY_FIX_SEP10.md  SECURITY_FIX_SUMMARY.md  SEP10_AUTHENTICATION.md  SEP10_SETUP_GUIDE.md  STELLAR_TOML_IMPLEMENTATION.md  WEBSOCKET_API.md  asset_mapping.json  check_out.txt  check_output.txt  entrypoint.sh  errors.txt  graphql_examples.md  (+2 more)
backend/.cargo/: config.toml
backend/.github/workflows/: logging-compliance-check.yml
backend/apm/: Cargo.toml
backend/apm/src/: lib.rs  middleware.rs
backend/benches/: cache_benchmarks.rs  corridor_benchmarks.rs  database_benchmarks.rs
backend/docs/: ERROR_HANDLING_GUIDE.md
backend/examples/: aggregation_demo.rs  ml_test.rs  rpc_demo.rs  snapshot_generation_demo.rs
backend/migrations/: 005_create_corridor_aggregates.sql  005_create_ledger_ingestion_tables.sql  010_create_trustlines.sql  011_create_transactions.sql  012_create_account_merges.sql  013_create_snapshot_verifications.sql  014_create_api_keys.sql  014_create_vault_audit_log.sql  015_create_admin_audit_log.sql  015_create_gdpr_tables.sql  015_oauth_webhooks.sql  016_create_governance.sql  016_create_telegram_subscriptions.sql  017_create_vault_audit_log.sql  022_create_verified_assets.sql  023_add_query_optimization_indexes.sql  023_create_alert_rules.sql  024_add_performance_indexes.sql  024_create_alert_history.sql  025_create_contract_events.sql  026_create_verified_assets.sql  027_create_alert_rules.sql  028_create_alert_history.sql
backend/scripts/: verify_indexes.ps1  verify_indexes.sh
backend/src/: admin_audit_log.rs  alert_handlers.rs  alerts.rs  analytics.rs  api_analytics_middleware.rs  api_v1_middleware.rs  auth.rs  auth_middleware.rs  backup.rs  broadcast.rs  cache.rs  cache_invalidation.rs  cache_middleware.rs  crypto.rs  database.rs  env_config.rs  error.rs  gdpr.rs  handlers.rs  http_cache.rs  ip_whitelist_middleware.rs  lib.rs  logging.rs  main.rs  ml.rs  ml_handlers.rs  ml_tests.rs  models.rs  monitor.rs  muxed.rs  network.rs  openapi.rs  rate_limit.rs  request_id.rs  request_signing_middleware.rs  rpc_handlers.rs  shutdown.rs  state.rs  stellar_insights.db  validation.rs  (+1 more)
backend/src/analytics/: corridor.rs
backend/src/api/: account_merges.rs  achievements.rs  alerts.rs  analytics_dashboard.rs  anchors.rs  anchors_cached.rs  api_analytics.rs  api_keys.rs  asset_verification.rs  auth.rs  cache_stats.rs  contract_events.rs  corridors.rs  corridors_cached.rs  cost_calculator.rs  digest.rs  export.rs  fee_bump.rs  ml.rs  (+19 more)
backend/tests/: account_merge_test.rs  analytics_tests.rs  api_corridors_test.rs  api_integration_test.rs  asset_verification_test.rs  auth_flow_test.rs  cache_invalidation_test.rs  corridor_analytics_test.rs  corridor_analytics_tests.rs  corridor_metrics_test.rs  cors_test.rs  cost_calculator_test.rs  database_recent_anchor_performance_test.rs  fee_bump_test.rs  historical_snapshot_test.rs  ingestion_test.rs  ip_whitelist_test.rs  liquidity_pool_test.rs  network_test.rs  pagination_test.rs  payment_processing_test.rs  pool_config_test.rs  price_feed_integration_test.rs  rate_limit_tests.rs  replay_system_test.rs  rpc_resilience_test.rs  sep10_test.rs  snapshot_integration_test.rs  snapshot_service_test.rs  snapshot_test.rs  stellar_toml_test.rs  test_graphql_sql_injection.rs  test_sql_injection_prevention.rs  trustlines_test.rs  validation_test.rs  verification_rewards_test.rs  webhook_event_service_tests.rs  websocket_integration_test.rs
contracts/: .gitignore  ACL_GUIDE.md  Cargo.toml  README.md
contracts/Add Health Check and Readiness Endpoints/: Cargo.toml  HEALTH_ENDPOINTS.md  health.rs  main.rs
contracts/Add Request Validation Middleware/: Cargo.toml
contracts/Implement Proper Cache Invalidation Strategy/: anchors_cached.rs  cache.rs  corridors_cached.rs  invalidation.rs
contracts/Implement Stellar DEX Liquidity Aggregator/: MarketDepthChart.tsx  corridors_cached_patch.rs  dex_aggregator.rs  dex_aggregator_integration.rs  page.tsx  stellar_order_book_additions.rs
contracts/access-control/: Cargo.toml  README.md
contracts/analytics/: ADMIN_TRANSFER_EVENTS_IMPLEMENTATION.md  Cargo.toml  README.md
contracts/benches/: Cargo.toml
contracts/example-contract/: Cargo.toml
contracts/governance/: Cargo.toml  README.md
contracts/snapshot-contract/: Cargo.toml  README.md
contracts/stellar_insights/: Cargo.toml  README.md
(+561 files in other folders)
