[package]
name = "stellar-insights-apm"
version = "0.1.0"
edition = "2021"
description = "APM integration for Stellar Insights"
authors = ["Stellar Insights Team"]

[dependencies]
# OpenTelemetry core
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["trace", "metrics", "logs", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.13"

main
# Tracing integration
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Axum for middleware
axum = "0.7"
tower = "0.4"

# HTTP client for APM endpoints
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }

# Redis for distributed tracing context
redis = { version = "0.25", features = ["aio", "tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
