[package]
name    = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1"
axum        = { version = "0.7", features = ["json"] }
chrono      = { version = "0.4", features = ["serde"] }
redis       = { version = "0.25", features = ["tokio-comp", "aio"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
tokio       = { version = "1", features = ["full"] }
tower       = "0.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
