[package]
name = "api-validation"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.18", features = ["derive"] }
regex = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
