[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
arbitrary = "1.3"
bolero = "0.13.4"
soroban-sdk = { workspace = true, features = ["testutils"] }
bolero = "0.10"
bolero-generator = "0.10"
