[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
bolero = "0.13.4"
bolero-generator = "0.13"
soroban-sdk = { workspace = true, features = ["testutils"] }

