[package]
name = "governance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
soroban-sdk = { workspace = true }
analytics = { path = "../analytics" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
