[package]
name = "governance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
soroban-sdk = { workspace = true }
analytics = { path = "../analytics" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }