[package]
name = "snapshot-contract"
version = "0.0.0"
edition = "2021"
publish = false

# Panic prevention lints - enforce proper error handling
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

access-control = { path = "../access-control" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
